kubernetes/apps/inference/janet/brain/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: janet-brain
spec:
  selector:
    app.kubernetes.io/name: janet-brain
  ports:
    - name: http
      port: 8787
      targetPort: http
